feat(server): add tenant create
