# packages/server/openapi/spec.json
@@ -353,6 +353,145 @@
           }
         ]
       }
+    },
+    "/tenants": {
+      "post": {
+        "tags": [
+          "tenants"
+        ],
+        "summary": "Create a tenant",
+        "description": "Create a new tenant in a database",
+        "operationId": "createTenant",
+        "requestBody": {
+          "content": {
+            "*/*": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "201": {
+            "description": "Tenant created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "required": [
+                    "id"
+                  ],
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "string"
+                    },
+                    "name": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "required": [
+                    "errorCode",
+                    "message",
+                    "statusCode"
+                  ],
+                  "type": "object",
+                  "additionalProperties": true,
+                  "properties": {
+                    "errorCode": {
+                      "type": "string",
+                      "enum": [
+                        "internal_error",
+                        "bad_request",
+                        "entity_not_found",
+                        "duplicate_entity",
+                        "invalid_credentials",
+                        "unknown_oidc_provider",
+                        "provider_already_exists",
+                        "provider_config_error",
+                        "provider_mismatch",
+                        "provider_update_error",
+                        "session_state_missing",
+                        "session_state_mismatch",
+                        "oidc_code_missing"
+                      ],
+                      "message": {
+                        "type": "string"
+                      },
+                      "statusCode": {
+                        "type": "integer",
+                        "format": "int32"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Database not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "required": [
+                    "errorCode",
+                    "message",
+                    "statusCode"
+                  ],
+                  "type": "object",
+                  "additionalProperties": true,
+                  "properties": {
+                    "errorCode": {
+                      "type": "string",
+                      "enum": [
+                        "internal_error",
+                        "bad_request",
+                        "entity_not_found",
+                        "duplicate_entity",
+                        "invalid_credentials",
+                        "unknown_oidc_provider",
+                        "provider_already_exists",
+                        "provider_config_error",
+                        "provider_mismatch",
+                        "provider_update_error",
+                        "session_state_missing",
+                        "session_state_mismatch",
+                        "oidc_code_missing"
+                      ],
+                      "message": {
+                        "type": "string"
+                      },
+                      "statusCode": {
+                        "type": "integer",
+                        "format": "int32"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "jwtBearerAuth": []
+          }
+        ]
+      }
     }
   }
 }
